--- a/Index.HTML
+++ b/Index.HTML
@@ -4,7 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width+device-width,
+        <meta name="viewport" content="width=device-width,
 initial-scale=1.0">
         <title>Howdy World!</title>
         <link rel="stylesheet" href="css/style.css">
